--- a/app/assets/stylesheets/watchlist_asset_module.scss
+++ b/app/assets/stylesheets/watchlist_asset_module.scss
@@ -1,4 +1,4 @@
-.watchlist-asset-module-div {
+.watchlist-asset-modal-div {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -9,42 +9,43 @@
   z-index: 10;
 }
 
-.watchlist-asset-module {
+.watchlist-asset-modal {
   width: 400px;
-  height: 500px;
+  height: fit-content;
+  max-height: 500px;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   padding: 20px;
   border-radius: 5px;
   background-color: #1E2124;
   
 }
 
-.list-asset-module-title {
+.list-asset-modal-title {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 18px;
 }
 
 
-.asset-module-button {
+.asset-modal-button {
   width: 90%;
   border-radius: 5px;
   height: 50px;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 
 
-.asset-module-button.green {
+.asset-modal-button.green {
   background-color: #00C805;
 }
 
-.asset-module-button.red {
+.asset-modal-button.red {
   background-color: #FF5000;
 }
 
-.asset-module-button:disabled {
+.asset-modal-button:disabled {
   background-color: gray;
 }
 
@@ -110,4 +111,10 @@ input[type=checkbox]:checked {
 #plus-icon.red {
   background-color:rgba(255,80,0,0.2);
   color: #FF5000;
+}
+
+.close-modal:hover {
+  cursor: pointer;
+  background-color: rgb(64,73,78);
+  border-radius: 5px;
 }
