update destroy watchlist

--- a/app/assets/stylesheets/watchlist_mini.scss
+++ b/app/assets/stylesheets/watchlist_mini.scss
@@ -18,7 +18,7 @@
   flex-direction: column;
   justify-content: center;
 }
-#mini-icon {
+.mini-icon {
   font-size: 30px;
   width: 50px;
   height: 60px;
