--- a/app/assets/stylesheets/watchlist_show.scss
+++ b/app/assets/stylesheets/watchlist_show.scss
@@ -19,10 +19,16 @@
 .watchlist-aside {
   border: 1px solid grey;
   min-width: 275px;
-  max-height: 550px;
+  height: 600px;
   margin: 40px 50px;
   background-color: #1E2124;
   border-radius: 5px;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+.watchlist-aside::-webkit-scrollbar {
+  display: none;
 }
 
 .watchlist-aside-title {
@@ -182,4 +188,36 @@ th:hover, .filter-icon:hover {
 
 .hidden{
   display:none
+}
+
+.watchlist-icon {
+  width: 50px;
+  height: 60px;
+  font-size: 50px;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+}
+
+.watchlist-icon:hover {
+  cursor: pointer;
+  background-color: rgb(64,73,78);
+}
+
+.empty-table {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20%;
+  line-height: 2;
+}
+
+.empty-table-title {
+  font-size: 21px;
+}
+
+.empty-table-text {
+  font-size: 15px;
 }
