update watchlist crud

--- a/app/assets/stylesheets/watchlist_asset_modal.scss
+++ b/app/assets/stylesheets/watchlist_asset_modal.scss
@@ -37,10 +37,18 @@
 
 .asset-modal-button.greenText, .create-new-list-button.greenText {
   background-color: #00C805;
+  color: black;
+}
+.asset-modal-button.greenText:hover:enabled {
+  background-color: #68c46b;
 }
 
 .asset-modal-button.redText, .create-new-list-button.redText {
   background-color: #FF5000;
+}
+
+.asset-modal-button.redText:hover:enabled {
+  background-color: #fc7c41;
 }
 
 .asset-modal-button:disabled {
@@ -117,69 +125,4 @@ input[type=checkbox]:checked {
   cursor: pointer;
   background-color: rgb(64,73,78);
   border-radius: 5px;
-}
-
-#choose-icon {
-  width: 50px;
-  height: 50px;
-  font-size: 25px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.new-list-input {
-  background-color: #30363A;
-  height: 50px;
-  width: 250px;
-  border: none;
-  border-radius: 5px;
-  padding-left: 10px;
-  color: white;
-}
-.new-list-inputs {
-  display: flex;
-}
-.create-new-list-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.new-list-button-div {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.cancel-new-list-button, .create-new-list-button {
-  width: 100px;
-  height: 35px;
-  border-radius: 5px;
-  margin: 10px 5px;
-}
-
-.cancel-new-list-button.redText {
-  border: 1px solid #FF5000;
-  background-color: transparent;
-  color: #FF5000;
-}
-.cancel-new-list-button.greenText {
-  border: 1px solid #00C805;
-  background-color: transparent;
-  color: #00C805;
-}
-.create-new-list-button {
-  color: #1E2124;
-}
-
-.cancel-new-list-button.redText:hover {
-  background-color: rgba(206, 97, 46, 0.308);
-}
-.cancel-new-list-button.greenText:hover {
-  background-color: rgba(9, 197, 15, 0.2);
-}
-.create-new-list-button.red:hover {
-  background-color: #e97844;
-}
-.create-new-list-button.greenText:hover {
-  background-color: #88c58a;
 }
