--- a/app/assets/stylesheets/watchlist_show.scss
+++ b/app/assets/stylesheets/watchlist_show.scss
@@ -137,7 +137,7 @@ th:hover, .filter-icon:hover {
   color: #00C805;
   border-bottom: 1px solid #00C805;
 }
-.fa-angle-down, .fa-angle-up {
+.fa-angle-down, .fa-angle-up, .delete-watchlist-asset:hover {
   color: #00C805;
 }
 
@@ -222,9 +222,13 @@ th:hover, .filter-icon:hover {
   font-size: 15px;
 }
 
-.table-row:hover {
+.table-row:hover{
   cursor: pointer;
   background-color: #1E2124;
+}
+
+.delete-watchlist-asset:hover .table-row {
+  background-color: black;
 }
 
 .toggle-show-new-form {
