--- a/app/assets/stylesheets/asset_show.scss
+++ b/app/assets/stylesheets/asset_show.scss
@@ -39,6 +39,7 @@
   padding-bottom: 20px;
   border-bottom: 1px solid gray;
   margin-bottom: 20px;
+  margin-top: 50px;
 }
 
 .about-body, .stats-body{
