--- a/app/assets/stylesheets/portfolio-header.scss
+++ b/app/assets/stylesheets/portfolio-header.scss
@@ -6,7 +6,17 @@
   border-radius: 5px;
   color: white;
   display: flex;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  vertical-align: top;
+  overflow: visible;
+}
+
+.search-bar-flex {
+  display: flex;
+  width: 100%;
+  height: 35px;
+  padding-top: 10px;
 }
 
 #search-bar {
@@ -22,23 +32,25 @@
 .search-bar-div:focus-within, #search-bar:focus {
   background-color: #1E2124;
 }
+#search-bar:focus .search-result:hover {
+  background-color: white;
+}
 
 .fa-search {
   padding: 0 5px;
 }
 
 .search-results-div {
-  // color: white;
   position: absolute;
   display: flex;
   flex-direction: column;
-  top: 43px;
+  top: 45px;
   background-color: #1E2124;
   border: 1px solid gray;
-  border-top: none;
   border-radius: 5px;
   width: 450px;
   padding: 20px 0;
+  font-size: 13px; 
 }
 
 .search-result {
