--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -12,7 +12,7 @@
 .portfolio, .asset-show-body {
   background-color: black;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   width: 100%;
   height: 100%;
   padding: 5%;
