--- a/app/assets/stylesheets/portfolio-header.scss
+++ b/app/assets/stylesheets/portfolio-header.scss
@@ -1,27 +1,31 @@
 .search-bar-div {
-  width: 450px;
+  width: 350px;
   height: 35px;
   background-color: black;
-  border: 1px solid gray;
-  border-radius: 5px;
+  
   color: white;
   display: flex;
   display: flex;
   flex-direction: column;
   vertical-align: top;
   overflow: visible;
+  box-sizing: border-box;
 }
 
 .search-bar-flex {
+  border: 1px solid gray;
+  border-radius: 5px;
   display: flex;
   width: 100%;
   height: 35px;
-  padding-top: 10px;
+  box-sizing: border-box;
+  
+
 }
 
 #search-bar {
   width: 90%;
-  height: 90%;
+  height: 30px;
   background-color: black;
   border: none;
   color: white;
@@ -37,20 +41,22 @@
 }
 
 .fa-search {
-  padding: 0 5px;
+  padding: 3px 5px;
+  box-sizing: border-box;
+  z-index: 10;
 }
 
 .search-results-div {
-  position: absolute;
   display: flex;
   flex-direction: column;
-  top: 45px;
   background-color: #1E2124;
   border: 1px solid gray;
-  border-radius: 5px;
-  width: 450px;
+  border-top: none;
+  border-radius: 0 0 5px 5px;
+  width: 100%;
   padding: 20px 0;
   font-size: 13px; 
+  margin-top: -4px;
 }
 
 .search-result {
