--- a/app/assets/stylesheets/asset_show.scss
+++ b/app/assets/stylesheets/asset_show.scss
@@ -33,6 +33,10 @@
   border-bottom: 1px solid gray;
 }
 
+.about {
+  margin-top: 40px;
+}
+
 .about-title, .stats-title {
   width: 100%;
   font-size: 24px;
