update meta tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,13 @@
     <script type="text/javascript">
       window.alphaAPIKey = "<%= Rails.application.credentials.alpha[:api_key] %>"
     </script>
+
+
+  <meta property="og:title" content="Sparrowhood" />
+  <meta property='og:image' content="<%= image_url('Sparrowhood_meta.png') %>" />
+  <meta property="og:description" content="Sparrowhood is a clone of the stock trading website Robinhood. Users can make pseudo transactions and view real time data for stocks." />
+  <meta property="og:url" content="https://sparrowhood.herokuapp.com/#/" />
+
   </head>
 
   <body>
