update meta tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
   <meta property="og:title" content="Sparrowhood" />
   <meta property='og:image' content="<%= image_url('Sparrowhood_meta.png') %>" />
   <meta property="og:description" content="Sparrowhood is a clone of the stock trading website Robinhood. Users can make pseudo transactions and view real time data for stocks." />
-  <meta property="og:url" content="https://sparrowhood.herokuapp.com/#/" />
+  <meta property="og:url" content="https://sparrowhood.herokuapp.com" />
 
   </head>
 
