update styling nav bar

--- a/app/assets/stylesheets/portfolio-header.scss
+++ b/app/assets/stylesheets/portfolio-header.scss
@@ -100,6 +100,6 @@ button.portfolio-nav-links {
 }
 
 .port-nav {
-  justify-content: space-between;
-  margin: 0 5%;
+  justify-content: space-around;
+  margin: 10px 5% 0 5%;
 }
