--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -80,18 +80,7 @@ a {
   display: flex;
   justify-content: space-between;
 }
-@media (max-width: 900px){
-  nav {
-    justify-content: space-between;
-    padding: 0 10px;
-  }
-  .hide-nav {
-    display: none;
-  }
-  .show {
-    display: inline;
-  }
-}
+
 
 .banner-title {
   font-size: 40px;
@@ -146,8 +135,24 @@ a {
   height: 100%;
   object-fit: contain;
   left: 0;
-  top: 0;
+  top: -2px;
   z-index: 1;
+}
+
+@media (max-width: 900px){
+  nav {
+    justify-content: space-between;
+    padding: 0 10px;
+  }
+  .hide-nav {
+    display: none;
+  }
+  .show {
+    display: inline;
+  }
+  #splashVideo {
+    top: 0px;
+  }
 }
 
 @media (min-width: 900px){
@@ -193,4 +198,8 @@ footer li {
 }
 #icon-links {
   padding-left: 8px;
+}
+
+.splash-feather#feather {
+  height: 1.5em;
 }
