--- a/app/assets/stylesheets/session_form.scss
+++ b/app/assets/stylesheets/session_form.scss
@@ -185,6 +185,7 @@ input[type=text]:focus .input-box {
   padding: 18px 48px;
   margin-right: 24px;
   margin-top: 10px;
+  cursor: pointer;
 }
 
 .bold {
