--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -207,3 +207,28 @@ footer li {
 .underline {
   text-decoration: underline;
 }
+
+.splash-disclaimer-modal {
+  position: absolute;
+  background-color: gray;
+  width:100%;
+  height: 100%;
+  color: white;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.splash-disclaimer-modal-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 50%;
+  height: 50%;
+  background-color: black;
+  font-size: 30px;
+  padding: 10%;
+  border-radius: 5px;
+}
